--- a/translations/messages+intl-icu.de.xlf
+++ b/translations/messages+intl-icu.de.xlf
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en" trgLang="de">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="de" trgLang="de">
   <file id="messages.de">
-    <unit id="baI_ZxO" name="Field name">
+    <unit id="L1V0vF5" name="Field name">
       <segment>
         <source>Field name</source>
         <target>Feldname</target>
+      </segment>
+    </unit>
+    <unit id="3NHVIj9" name="Name">
+      <segment>
+        <source>Name</source>
+        <target>Name</target>
+      </segment>
+    </unit>
+    <unit id="Obc3DzC" name="Age">
+      <segment>
+        <source>Age</source>
+        <target>Alter</target>
+      </segment>
+    </unit>
+    <unit id="dUkL17k" name="submit">
+      <segment>
+        <source>submit</source>
+        <target>Einreichen</target>
       </segment>
     </unit>
   </file>
