--- a/translations/my_own_domain+intl-icu.de.xlf
+++ b/translations/my_own_domain+intl-icu.de.xlf
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en" trgLang="de">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="de" trgLang="de">
   <file id="my_own_domain.de">
-    <unit id="baI_ZxO" name="Custom domain test">
+    <unit id="K78.Uat" name="Custom domain test">
       <segment>
         <source>Custom domain test</source>
         <target>Nur noch ein Test</target>
